<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <ListView android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              android:id="@+id/TaskList" />
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/TaskText"
        android:hint="@string/task_text_hint_new_task"
        android:visibility="gone">
        <requestFocus/>
    </EditText>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/NewTaskButtons"
        android:visibility="gone">
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/btnSave"
            android:text="@string/btn_save"/>
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/btnCancel"
            android:text="@string/btn_cancel"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ControlButtons">
        <Button
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/btnNew"
            android:text="@string/btn_add"
            android:layout_width="fill_parent"/>
        <Button
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/btnClear"
            android:text="@string/btn_clear"
            android:layout_width="fill_parent"/>
    </LinearLayout>
</LinearLayout>

